tests222/tests2/test125.out
lli: <stdin>:1:1: error: expected top-level entity
line 8: variable w38g3A3dZm is not defined
^
